2011-06-05  Earnie Boyd  <earnie@users.sourceforge.net>

	Add new aliases for mingw32-base and msys-base
	* mingw32/mingw32-base.xml: Add 'mingw' and 'mingw32' aliases
	for mingw32-base.
	* mingw32/issue.log: Update accordingly.
	* msys/msys-base.xml: Add 'msys' alias for msys-base.
	* msys/issue.log: Update accordingly.

2011-05-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Work around MSYS' `openssl sha1' output format anomaly.

	* Makefile.comm.in (sha1sum): New macro; define it.
	(sha1hash): Use it.

2011-05-30  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish msys-mintty.

	* msys/msys-mintty.xml: Update to 0.9.8-1.
	* msys/issue.log: Updated accordingly.

2011-05-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for mingw-get-0.3-alpha-1 release.

	* mingw32/mingw32-mingw-get.xml: Add release entries.
	* mingw32/issue.log: Update accordingly.

2011-05-21  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish mingw32-bzip2.

	* mingw32/mingw32-bzip2.xml: Update to 1.0.6-1
	* mingw32/issue.log: Updated accordingly.

2011-05-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for mingw-get-0.2-alpha-4 release.

	* mingw32/mingw32-mingw-get.xml: Add release entries.
	* mingw32/issue.log: Update accordingly.

2011-05-04  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Ensure all (sub)packages have at least one explicit
	<component /> element. Harmonizes 'mingw-get list' output.

	* mingw32/mingw32-gcc3.xml: Ensure (sub) packages with
	a single component use an explicit <component /> element.
	* mingw32/mingw32-gcc4.xml: Ditto.
	* mingw32/issue.log: Updated accordingly.

2011-05-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Remove defunct CVS specific synchronisation goals.
	Base (re)publication decisions on changing SHA1 hashes.

	* common/issue.log: Add SHA1 hashes to publication records.
	* mingw32/issue.log msys/issue.log: Likewise.
