@@ -50,7 +50,7 @@
   f00d8a451ba74658073db3cfae44a0d3dbaf3ed9 2010090600 mingw32-pdcurses.xml
   e0b11cf1f8b8bc2229c34905e4ce5fedfeb52778 2010090600 mingw32-pexports.xml
   85218a27818c20463c1bb520f8a3044969406fbc 2010090600 mingw32-popt.xml
-  1dd5cd39ee78cb9895ddf42b0621b5ffe0176bc4 2010083100 mingw32-pthreads-w32.xml
+  31b0150f6403ae4a1039c1f3cc9633be29e929c5 2011071201 mingw32-pthreads-w32.xml
   5581a30ffc9af24b9d8fcb2b04c3661f26ddd226 2011032600 mingw32-runtime.xml
   713bf38bf91f67c0e1bdb9cc379285c10c3d7afb 2010090600 mingw32-xz.xml
   09f15afc1c832abdf7ecf7d983d8633a90c89697 2011042400 mingw32-zlib.xml
